
### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

### Other libraries:

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

- #9650: keep refactoring the pattern-matching compiler
  (Gabriel Scherer, review by Thomas Refis)

### Build system:

### Bug fixes:

OCaml 4.12.0
------------

### Language features:

- #1655: pattern aliases do not ignore type constraints
  (Thomas Refis, review by Jacques Garrigue and Gabriel Scherer)

* #9500, #9727: Injectivity annotations
  One can now mark type parameters as injective, which is useful for
  abstract types:
    module Vec : sig type !'a t end = struct type 'a t = 'a array end
  On non-abstract types, this can be used to check the injectivity of
  parameters. Since all parameters of record and sum types are by definition
  injective, this only makes sense for type abbreviations:
    type !'a t = 'a list
  (Jacques Garrigue, review by Jeremy Yallop and Leo White)

- #9429: Add unary operators containing `#` to the parser for use in ppx
  rewriters
  (Leo White, review by Damien Doligez)

### Supported platforms:

- #9699: add support for iOS and macOS on ARM 64 bits
  (GitHub user @EduardoRFS, review by Xavier Leroy, Nicolás Ojeda Bär
   and Anil Madhavapeddy, additional testing by Michael Schmidt)

### Type system:

* #9811: remove propagation from previous branches
  Type information inferred from previous branches was propagated in
  non-principal mode. Revert this for better compatibility with
  -principal mode.
  For the time being, infringing code should result in a principality warning.
  (Jacques Garrigue, review by Thomas Refis and Gabriel Scherer)

### Runtime system:

- #9756: garbage collector colors change
  removes the gray color from the major gc
  (Sadiq Jaffer and Stephen Dolan reviewed by Xavier Leroy,
  KC Sivaramakrishnan, Damien Doligez and Jacques-Henri Jourdan)
