@@ -35,3 +35,12 @@ module M :
     sig module type S = sig type t = float val foo : t X.t end end
 module N : sig module type S = sig type t = float val foo : int end end
 |}]
+
+type 'a always_int = int
+module F (X : sig type t end) = struct type s = X.t always_int end
+module M = F (struct type t = T end)
+[%%expect{|
+type 'a always_int = int
+module F : functor (X : sig type t end) -> sig type s = X.t always_int end
+module M : sig type s = int end
+|}]
